--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="cell" data-row="2" data-col="1"> </div>
         <div class="cell" data-row="2" data-col="2"> </div>
     </div>
-    <button type="button" id="resetBtn">Reset</button><br><br>
+    <button type="button" id="resetBtn">Reset</button>
     
     <div id="switch_container"> 
         <div class="symbol">×</div>
