--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="cell" data-row="2" data-col="2"> </div>
         </div>
         <div id="game_mode">
-           <p>Game Mode:</p> 
-            <input type="radio"  name="game_mode" value="1" id="easy" checked>
-            <label for="easy">Easy</label>
-            <input type="radio"  name="game_mode" value="6" id="hard">
-            <label for="hard">Hard</label>
+            <p>Game Mode:</p> 
+            <input type="radio"  name="game_mode" value="1" id="easy" checked>
+            <label for="easy">Easy</label><br>
+            <input type="radio"  name="game_mode" value="6" id="hard">
+            <label for="hard">Hard</label>
         </div>
     </div>
     
